# ME2-Restoration

client/: Cargo.toml  README.md  build.rs
client/game/me2/iToys/ME2/: AavAE7E.swf  Bud105D.swf
client/game/me2/iToys/ME2Data/: me2Game.dcr  me2Game.html
client/game/me2/iToys/ME2Data/DSWMedia/: W01L01A01Z01.w3d  W01L01A01Z02.w3d  W01L01A02Z01.w3d  W01L01A02Z02.w3d  W01L01A03Z01.w3d  W01L01A03Z02.w3d  W01L01A04Z01.w3d  W01L01A04Z02.w3d  W01L01A05Z01.w3d  W01L01A05Z02.w3d  W01L01A05Z03.w3d  W01L01BASE.w3d  W01L01STRUCT.w3d  W01L02A01Z01.w3d  W01L02A01Z02.w3d  W01L02A02Z01.w3d  W01L02A02Z02.w3d  W01L02A02Z03.w3d  W01L02A03Z01.w3d  W01L02A03Z02.w3d  W01L02A03Z03.w3d  W01L02A04Z01.w3d  W01L02A04Z02.w3d  W01L02A04Z03.w3d  W01L02BASE.w3d  W01L02STRUCT.w3d  ava1.w3d  ava2.w3d  vehatv.w3d  vehbarrel.w3d  vehbike.w3d  vehcat.w3d  vehdonkey.w3d  vehglider.w3d  vehjet.w3d  vehjski.w3d  vehluge.w3d  vehslft.w3d  vehwhig.w3d  vehzip.w3d
client/game/me2/iToys/ME2Data/projector/PJ1159/: SPRD.INI
client/game/me2/iToys/ME2Data/projector/PJ1159/Xtras/: AVI Agent.x32  Animated GIF Options.x32  Cursor Asset.x32  DVD Asset.x32  Dynamiks.x32  Flash Asset Options.x32  Font Asset Dialog.x32  GIF Agent.x32  Image Translator Helper.x32  LZComprs.x32  MP4Asset.x32  MacPaint Import.x32  MixSkp.x32  Palette Import.x32  QTAuth.x32  QTExport.x32  RealMedia Asset.x32  SWAOpt.x32  Shockwave 3D Asset.x32  Speech.x32  Squish.x32  Sun AU Import Export.x32  TextAuth.x32  UIHelper.x32  Vector Editor Xtra.x32  Windows Media Auth.x32
client/game/projector/PJ1159/Xtras/: 3DAuth.x32  ActXPriv.x32  ActiveX.x32  Actor Control.x32  AudioFilters.x32  BitdReader.x32  Cursor Options.x32  DVD Authoring.x32  F4VAsset.x32  FLVAsset.x32  FileIo.x32  Fireworks Import.x32  Flash Agent.x32  MP4Auth.x32  MP4Export.x32  MixCollada.x32  PICT Agent.x32  Photoshop 3.0 Import.x32  Photoshop CLUT Import.x32  QT6Asset.x32  QuickTime Agent.x32  RealMedia Authoring.x32  SWACnvrt.x32  SWAStrm.x32  Script Agent.x32  TIFF Import Export.x32  Windows Media Asset.x32  baMoveCursor.x32
client/me2_launcher/: Cargo.toml
client/me2_launcher/src/: inject.rs  main.rs
client/me2hook/: Cargo.toml
client/me2hook/src/: console.rs  hooks.rs  lib.rs
client/projector_injector/: i686-w64-mingw32.toolchain.cmake  x86_64-w64-mingw32.toolchain.cmake
client/projector_injector/hook/: CMakeLists.txt  hook.cpp
client/projector_injector/injector/: CMakeLists.txt  main.cpp
handheld/: README.md
handheld/me2_usb/: Cargo.toml
handheld/me2_usb/src/: main.rs  me2_usb.rs
server/asset_server/me2_web/: Cargo.toml
server/asset_server/me2_web/src/: main.rs
server/asset_server/me2_web/web/: manW01L01A01.txt  manW01L01A02.txt  manW01L01A03.txt  manW01L01A04.txt  manW01L01A05.txt  manW01L01A06.txt  manW01L01BASE.txt  manW01L02A01.txt  manW01L02BASE.txt  me2Assets.txt  me2Master.txt
server/game_server/: server.py
server/game_server/me2_game_server/: Cargo.toml
server/game_server/me2_game_server/src/: avatar.rs  commands.rs  connection.rs  main.rs  packet.rs  player.rs  proplist.rs  server.rs
server/game_server/me2_game_server/src/packet/: client_packet.rs  mod.rs  server_packet.rs
server/game_server/me2_game_server/src/packet_handler/: ct.rs  gp.rs  im_alive.rs  jmus_auth.rs  jmus_bye.rs  jmus_check.rs  mod.rs  mu.rs  us.rs  uu.rs
