[package]
name = "me2_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["smol", "advanced"] }
config = "0.13"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_Security"] }

[profile.release]
strip = true
lto = true
panic = "abort"
